--- a/rancha-imgui/rancha-imgui.vcxproj
+++ b/rancha-imgui/rancha-imgui.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f4c964f6-5c0c-4c74-bd2b-c8a9b858feae}</ProjectGuid>
-    <RootNamespace>DaocLauncher</RootNamespace>
+    <ProjectGuid>{a3f4003f-cd37-4945-8035-aa8dddb59c74}</ProjectGuid>
+    <RootNamespace>ranchaimgui</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -72,13 +72,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>login</TargetName>
-    <TargetExt>.dll</TargetExt>
+    <IncludePath>C:\Users\ritzgames\imgui\backends;C:\Users\ritzgames\imgui;C:\Users\ritzgames\source\repos\mojowannabe\mojowannabe;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>login</TargetName>
-    <TargetExt>.dll</TargetExt>
+    <IncludePath>C:\Users\ritzgames\imgui\backends;C:\Users\ritzgames\imgui;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -90,15 +88,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ImTextureID=ImU64;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dxgi.lib;D3D12.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
-      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -107,8 +105,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ImTextureID=ImU64;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\ritzgames\source\repos\mojowannabe\mojowannabe;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -116,6 +115,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dxgi.lib;D3D12.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
@@ -148,11 +148,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DaocLauncher.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\backends\imgui_impl_dx12.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\backends\imgui_impl_win32.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\imgui.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\..\..\..\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="rancha.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DaocLauncher.h" />
-    <ClInclude Include="imports.h" />
+    <ClInclude Include="..\..\..\..\imgui\backends\imgui_impl_dx12.h" />
+    <ClInclude Include="..\..\..\..\imgui\backends\imgui_impl_win32.h" />
+    <ClInclude Include="..\..\..\..\imgui\imconfig.h" />
+    <ClInclude Include="..\..\..\..\imgui\imgui.h" />
+    <ClInclude Include="..\..\..\..\imgui\imgui_internal.h" />
+    <ClInclude Include="..\..\..\..\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\..\..\..\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\..\..\..\imgui\imstb_truetype.h" />
+    <ClInclude Include="Account.h" />
+    <ClInclude Include="magic_enum.h" />
+    <ClInclude Include="rancha.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
